--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -209,17 +209,17 @@ We utilize both theoretical and computational tools to understand the nature of 
 \setcounter{tocdepth}{1}
 \tableofcontents
 \mainmatter
-\Include{Introduction}
+% \Include{Introduction}
 
-\Include{Rashba}
-\Include{GdMn2O5}
-\Include{Cr}
+% \Include{Rashba}
+% \Include{GdMn2O5}
+% \Include{Cr}
 
 \Include{Softening}
-\appendix
-\Include{DFT}
-\Include{Wannier}
-\Include{FEM}
+% \appendix
+% \Include{DFT}
+% \Include{Wannier}
+% \Include{FEM}
 % \glossary
 % \Include{acronyms}
 \backmatter
