--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -126,7 +126,7 @@ We demonstrate that this description works remarkably well in order to reproduce
 After discussing the complex behavior that arises from the model, we comment on the generality of the observations, and conclude by summarizing the main features of the effect. 
 %Even though the AFM intrachain superexchange interactions dominate over the AFM interchain interactions, there is nonetheless a geometric frustration due to the crystal structure, which can be seen most easily seen from the Mn pentagons surrouding the Gd atoms. This means that all AFM exchanges can not be satisfied at the same time, causing certain Mn bonds between the chains to have energetically unfavorable spin alignment. This leads to the first contribution to the ferroelectric polarization through Heisenberg exchange striction, lengthening bonds that have parallel spins and shortening those that have antiparallel ones.
 
-\section{Experimental results}
+\section{Experimental methods and results}
 \begin{figure}
     \centering
     \IncludeGraphics[width=\textwidth]{fig_exp2.png}
