added some small additions to the PN story

--- a/papers/FEM/FEM.tex
+++ b/papers/FEM/FEM.tex
@@ -1,4 +1,4 @@
-\chapter{Phase Field Modelling with the Finite Elements Method}
+\chapter{Phase Field Modeling with the Finite Elements Method \label{sec:FEM}}
 In light of trying to be self-contained, we will give a short introduction to the topic based on Ref.~\cite{Biner}.
 \begin{figure}
 	\IncludeGraphics{fem}
